// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputCheckbox > should render 1`] = `
<div>
  <div
    data-checkbox-root=""
    data-variant="custom"
  >
    <input
      hidden=""
      type="checkbox"
    />
     
    <span
      aria-hidden="true"
      class="checkbox-checked"
      data-checkbox-icon=""
      role="button"
      tabindex="0"
    />
    <!---->
  </div>
  
</div>
`;

exports[`InputCheckbox > should render 2`] = `
<div>
  <div
    data-checkbox-root=""
    data-variant="custom"
  >
    <input
      hidden=""
      type="checkbox"
    />
     
    <span
      aria-hidden="true"
      class="checkbox-unchecked"
      data-checkbox-icon=""
      role="button"
      tabindex="0"
    />
    <!---->
  </div>
  
</div>
`;
